# blog_app

./: .gitignore  justfile  main.py  pyproject.toml
blog/: admin.py  models.py  seeders.py  urls.py  views.py
blog/management/commands/: seed_blog.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: all_blogs.html  detail.html  index.html
blog/templates/blog/include/: blog-list.html  recent-blogs.html  show-blogs.html
blog/tests/: blog_tags.py  factories.py  test_blog_model.py
config/: settings.py  urls.py
scripts/management/commands/: seed.py
scripts/seed/: base.py  registry.py
static/: styles.css
templates/: base.html
templates/include/: header.html
templates/registration/: login.html
tests/: conftest.py
user/: seeders.py
user/management/commands/: user_seed.py
user/tests/: factories.py
